# MitchMath

./: CMakeLists.txt  README.md  pyproject.toml  test_basic.py
.github/workflows/: tests.yml
src/: add.cpp  divi.cpp  mitchmath_pybind.cpp  mul.cpp  sub.cpp
tests/: test_basic.py
